--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -6,13 +6,13 @@
     box-sizing: border-box;
 }
 :root {
-    --bg-color: #021B66;
+    --bg-color: #1A4266;
     /*--main-color: #1c89c1;*/
     --main-color2: #244e7a;
-    --main-color: #021B66;
+    --main-color: #1A4266;
     /*--logo-color: #1c89c1;*/
     --logo-color: #1c89c1;
-    --red-color: #fdb338;
+    --red-color: #6E0F27;
     --color-text: #001b48;
     --color-label: #787F95;
     --yellow: #25C172;
@@ -72,8 +72,8 @@ ul {
 ::-webkit-scrollbar-thumb
 {
     border-radius: 5px;
-    background: #FDB338;
-    background: linear-gradient(0deg,rgba(253, 179, 56, 1) 50%, rgba(255, 255, 255, 1) 100%);
+    background: #6E0F27;
+    background: linear-gradient(0deg,rgba(110, 15, 39, 1) 50%, rgba(2, 27, 102, 1) 100%);
 }
 
 .link-hover {
